fixed post content wrap

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -547,6 +547,7 @@ li {
   line-height: 1.6rem;
   padding: 0.8rem;
   text-align: justify;
+  word-wrap: break-word;
 }
 .post__btns {
   border-top: 1px solid #e3e5ed;
