--- a/public/assets/sass/_post.sass
+++ b/public/assets/sass/_post.sass
@@ -52,6 +52,7 @@
         line-height: 1.6rem
         padding: 0.8rem
         text-align: justify
+        word-wrap: break-word
     &__btns
         border-top: 1px solid #e3e5ed
         padding: 0.8rem 0.8rem 0rem 0.8rem
